# Trabalho1CG

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  GLHelpers.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  README.md  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  libassimp4_4.1.0~dfsg-3_amd64.deb  main.cpp  makefile
resource/: Donkey Kong.object  cube.object  default.frag  default.vert
